# spimex_api

./: coverage.txt  pyproject.toml  pytest.ini  report.html
app/: cache.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
app/routes/: trading.py
tests/: conftest.py  test_api.py  test_crud.py
